--- a/coffee/build.gradle
+++ b/coffee/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	// for log4j2 by hyeonrok 24.03.06
 	// https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1
 	implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16'
+	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.2.3'
 }
 
 tasks.named('test') {
